--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,9 @@
     <body>
         <div id='container'>
             <div id='post'>
+                <div id='cabecera'>
+                    Cabecera  
+                </div>
                 <h1>Este es el titulo actractivo e interesante del post </h1>
                 <p> y este es el parrafo de inicio
                     donde vamos, a explicar las cosas
