--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,10 @@
         <div id='container'>
             <div id='post'>
                 <div id='cabecera'>
-                    Cabecera  
+                    Hyperblog
+                    <span id="tagline">Tu blog de confianza</span> 
                 </div>
+                <div id="post">
                 <h1>Este es el titulo actractivo e interesante del post </h1>
                 <p> y este es el parrafo de inicio
                     donde vamos, a explicar las cosas
