--- a/blogpost.html
+++ b/blogpost.html
@@ -13,9 +13,9 @@
                 </div>
                 <div id="post">
                 <h1>Este es el titulo actractivo e interesante del post </h1>
-                <p> y este es el párrafo de inicio
+                <p> y este es el p&aacute;rrafo de inicio
                     donde vamos, a explicar las cosas
-                    increíbles que se pueden hacer con ramas</p>
+                    incre&iacute;bles que se pueden hacer con ramas</p>
                     <p>
                         los blogs son la mejor
                         forma de compartir 
